@@ -5,7 +5,8 @@ import static org.junit.jupiter.api.Assertions.*;
 import io.substrait.isthmus.AggregateFunctions;
 import io.substrait.isthmus.PlanTestBase;
 import io.substrait.isthmus.TypeConverter;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import org.apache.calcite.rel.core.AggregateCall;
 import org.apache.calcite.sql.fun.SqlSumEmptyIsZeroAggFunction;
 import org.apache.calcite.sql.type.SqlTypeName;
@@ -17,14 +18,17 @@ public class AggregateFunctionConverterTest extends PlanTestBase {
   void testFunctionFinderMatch() {
     AggregateFunctionConverter converter =
         new AggregateFunctionConverter(
-            extensions.aggregateFunctions(), List.of(), typeFactory, TypeConverter.DEFAULT);
+            extensions.aggregateFunctions(),
+            Collections.emptyList(),
+            typeFactory,
+            TypeConverter.DEFAULT);
 
     var functionFinder =
         converter.getFunctionFinder(
             AggregateCall.create(
                 new SqlSumEmptyIsZeroAggFunction(),
                 true,
-                List.of(1),
+                Arrays.asList(1),
                 0,
                 typeFactory.createSqlType(SqlTypeName.VARCHAR),
                 null));
